--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "express": "^4.16.4",
     "history": "^4.9.0",
     "mini-css-extract-plugin": "^0.5.0",
     "react": "^16.8.6",
@@ -39,6 +40,7 @@
     "react-input-mask": "^2.0.4",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-scripts": "^2.1.8",
     "serve": "^11.0.0"
   },
   "jest": {
