--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "test": "jest",
     "dev": "webpack-dev-server --mode development",
-    "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode production",
-    "heroku-postbuild": "npm run build"
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "heroku-postbuild": "webpack -p"
   },
   "author": "",
   "license": "MIT",
